Html and css fixes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Ultimate AI Chatbot">
     <link rel="icon" type="image/png" href="imgs/logo.png">
-    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
 </head>
 <body>
     <div id="sectionBox">
         <section>
-            <video src="home.mp4" type="video/mp4" autoplay muted loop></video>
+            <video src="home.mp4" autoplay muted loop></video>
             <header>
                 <nav>
                     <ul>
@@ -24,9 +24,9 @@
             <main>
                 <b>00</b>
                 <div>
-                    <img src="imgs/logo.png" alt="logo" class="logo"></img>
+                    <img src="imgs/logo.png" alt="logo" class="logo">
                     <h1>Checkm8</h1>
-                    <img src="imgs/logo.png" alt="logo" class="logo"></img>
+                    <img src="imgs/logo.png" alt="logo" class="logo">
                 </div>
                 <hr>
                 <p></p>
@@ -38,7 +38,7 @@
         <section>
             <i>How It Works</i>
             <b>01</b>
-            <img src="imgs/arrow_mini_left.png" alt="arrow_mini_left" class="navigation left"></img>
+            <img src="imgs/arrow_mini_left.png" alt="arrow_mini_left" class="navigation left">
             <div class="carousel">
                 <div class="carousel-titles">
                     <h2 style="top: 0"><p class="blink">[</p>Introduction<p class="blink">]</p></h2>
@@ -64,11 +64,11 @@
                 </div>
             </div>
             <span class="carousel-imgs">
-                <img src="imgs/carousel_img_1.png" alt="carousel_img_1" style="top: 0"></img>
-                <img src="imgs/carousel_img_2.png" alt="carousel_img_2" style="top: 100%"></img>
-                <img src="imgs/carousel_img_3.png" alt="carousel_img_3" style="top: -100%"></img>
+                <img src="imgs/carousel_img_1.png" alt="carousel_img_1" style="top: 0">
+                <img src="imgs/carousel_img_2.png" alt="carousel_img_2" style="top: 100%">
+                <img src="imgs/carousel_img_3.png" alt="carousel_img_3" style="top: -100%">
             </span>
-            <img src="imgs/arrow_mini_right.png" alt="arrow_mini_right" class="navigation right"></img>
+            <img src="imgs/arrow_mini_right.png" alt="arrow_mini_right" class="navigation right">
         </section>
         <section>
             <i>Pricing</i>
@@ -188,6 +188,6 @@
             <img src="imgs/form_img_2.png" alt="form_img_2">
         </section>
     </div>
-    <img src="imgs/arrow.png" alt="arrow" class="return"></img>
+    <img src="imgs/arrow.png" alt="arrow" class="return">
 </body>
 </html>
