Scale error fix maybe and src fix

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             <span class="carousel-imgs">
                 <picture>
                     <source media="(min-width:751px)" srcset="imgs/carousel_img_1.png">
-                    <img alt="carousel_img_1" style="top: 0">
+                    <img src="" alt="carousel_img_1" style="top: 0">
                 </picture>
                 <picture>
                     <source media="(min-width:751px)" srcset="imgs/carousel_img_2.png">
-                    <img alt="carousel_img_2" style="top: 100%">
+                    <img src="" alt="carousel_img_2" style="top: 100%">
                 </picture>
                 <picture>
                     <source media="(min-width:751px)" srcset="imgs/carousel_img_3.png">
-                    <img alt="carousel_img_3" style="top: -100%">
+                    <img src="" alt="carousel_img_3" style="top: -100%">
                 </picture>
             </span>
             <img src="imgs/arrow_mini_right.png" alt="arrow_mini_right" class="navigation right">
@@ -88,34 +88,34 @@
                     <th>
                         <picture>
                             <source media="(min-width:751px)" srcset="imgs/basic_light.png">
-                            <img alt="basic_icon">
+                            <img src="" alt="basic_icon">
                         </picture>
                         <span>Basic</span>
                         <picture>
                             <source media="(min-width:751px)" srcset="imgs/basic_light.png">
-                            <img alt="basic_icon">
+                            <img src="" alt="basic_icon">
                         </picture>
                     </th>
                     <th>
                         <picture>
                             <source media="(min-width:751px)" srcset="imgs/pro_light.png">
-                            <img alt="pro_icon">
+                            <img src="" alt="pro_icon">
                         </picture>
                         <span>Pro</span>
                         <picture>
                             <source media="(min-width:751px)" srcset="imgs/pro_light.png">
-                            <img alt="pro_icon">
+                            <img src="" alt="pro_icon">
                         </picture>
                     </th>
                     <th>
                         <picture>
                             <source media="(min-width:751px)" srcset="imgs/expert_light.png">
-                            <img alt="expert_icon">
+                            <img src="" alt="expert_icon">
                         </picture>
                         <span>Expert</span>
                         <picture>
                             <source media="(min-width:751px)" srcset="imgs/expert_light.png">
-                            <img alt="expert_icon">
+                            <img src="" alt="expert_icon">
                         </picture>
                     </th>
                 </tr>
@@ -225,11 +225,11 @@
             </span>
             <picture>
                 <source media="(min-width:751px)" srcset="imgs/form_img_1.png">
-                <img alt="form_img_1">
+                <img src="" alt="form_img_1">
             </picture>
             <picture>
                 <source media="(min-width:751px)" srcset="imgs/form_img_2.png">
-                <img alt="form_img_2">
+                <img src="" alt="form_img_2">
             </picture>
         </section>
     </div>
