More html fixes

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <section>
             <i>Get Started</i>
             <b>03</b>
-            <span>
+            <div>
                 <h2>Begin working with Checkm8</h2>
                 <hr>
                 <form>
@@ -222,7 +222,7 @@
                     <input type="number" id="securityCode" name="securityCode" class="short" required>
                     <input type="submit" value="Subscribe">
                 </form>
-            </span>
+            </div>
             <picture>
                 <source media="(min-width:751px)" srcset="imgs/form_img_1.png">
                 <img src="imgs/dummy.png" alt="form_img_1">
